--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
 
     .container {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
+      gap: 0;
       position: relative;
-      padding-bottom: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
 
     .container:not(:last-of-type)::after {
       content: '';
       position: absolute;
-      bottom: 0;
+      bottom: -20px;
       left: 0;
       height: 2px;
       width: 100%;
@@ -48,21 +47,21 @@
     }
 
     .day-box {
-      flex: 1 1 calc(33.33% - 20px);
-      border: 2px dotted #999;
+      width: 33.33%;
       padding: 20px;
+      border: 2px dotted #999;
       border-radius: 10px;
       background-color: #fafafa;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       position: relative;
     }
 
+    /* Vertical Dotted Divider Between Boxes */
     .day-box:not(:last-child)::after {
       content: '';
       position: absolute;
       top: 0;
       right: -15px;
-      width: 1px;
       height: 100%;
       border-right: 2px dotted #ccc;
     }
@@ -101,11 +100,15 @@
     }
 
     @media (max-width: 1000px) {
-      .day-box {
-        flex: 1 1 100%;
+      .container {
+        flex-direction: column;
       }
 
-      .day-box:not(:last-child)::after {
+      .day-box {
+        width: 100%;
+      }
+
+      .day-box::after {
         display: none;
       }
     }
