--- a/index.html
+++ b/index.html
@@ -88,6 +88,29 @@
         flex: 1 1 100%;
       }
     }
+
+    .image-gallery {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.image-gallery img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  flex: 1 1 45%;
+}
+
+@media (max-width: 1000px) {
+  .image-gallery img {
+    flex: 1 1 100%;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -178,6 +201,12 @@
         <tr><td>Chakrasana</td><td>2x45sec</td></tr>
         <tr><td>Shavasana</td><td>45sec</td></tr>
       </table>
+
+      <div class="image-gallery">
+  <img src="image1.jpg" alt="Workout Image 1">
+  <img src="image2.jpg" alt="Workout Image 2">
+</div>
+
     </div>
   </div>
 
