--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
       </table>
 
       <div class="image-gallery">
-  <img src="image1.jpg" alt="Workout Image 1">
-  <img src="image2.jpg" alt="Workout Image 2">
+  <img src="1.png" alt="Workout Image 1">
+  <img src="2.png" alt="Workout Image 2">
 </div>
 
     </div>
