--- a/index.html
+++ b/index.html
@@ -200,15 +200,14 @@
         <tr><td>Cobra Stretch</td><td>2x12</td></tr>
         <tr><td>Chakrasana</td><td>2x45sec</td></tr>
         <tr><td>Shavasana</td><td>45sec</td></tr>
-      </table>
+      </table
+    </div>
+  </div>
 
-      <div class="image-gallery">
+  <div class="image-gallery">
   <img src="1.png" alt="Workout Image 1">
   <img src="2.png" alt="Workout Image 2">
 </div>
-
-    </div>
-  </div>
 
 </body>
 </html>
